--- a/ElBilleton/src/main/webapp/Gerente/SearchBar.html
+++ b/ElBilleton/src/main/webapp/Gerente/SearchBar.html
@@ -1,5 +1,5 @@
 <div class="search">
-    <input type="text" name="campo" class="searchTerm" placeholder="Buscar por codigo...">
+    <input type="number" name="campo" class="searchTerm" placeholder="Buscar por codigo...">
     <button type="submit" class="searchButton" name="buscar">
         <i class="fa fa-search"></i>
     </button>
